Modify know more links

--- a/subevents/literary/index.html
+++ b/subevents/literary/index.html
@@ -108,8 +108,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a href="anunaad.pdf"  target="_blank" class="section__more-link">
-								<span class="section__more-linktext"><b>CLICK HERE</b></span>
+							<a target="_blank" class="section__more-link">
+								<center><span class="section__more-linktext"><b>team.culrav@culrav.in</b></span></center>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -147,8 +147,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a href="anunaad.pdf"  target="_blank" class="section__more-link">
-								<span class="section__more-linktext"><b>CLICK HERE</b></span>
+							<a target="_blank" class="section__more-link">
+								<center><span class="section__more-linktext"><b>team.culrav@culrav.in</b></span></center>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
