--- a/subevents/litmuse/index.html
+++ b/subevents/litmuse/index.html
@@ -176,8 +176,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a href="anunaad.pdf"  target="_blank" class="section__more-link">
-								<span class="section__more-linktext"><b>CLICK HERE</b></span>
+							<a target="_blank" class="section__more-link">
+								<center><span class="section__more-linktext"><b>team.culrav@culrav.in</b></span></center>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -235,8 +235,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a href="anunaad.pdf"  target="_blank" class="section__more-link">
-								<span class="section__more-linktext"><b>CLICK HERE</b></span>
+							<a target="_blank" class="section__more-link">
+								<center><span class="section__more-linktext"><b>team.culrav@culrav.in</b></span></center>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -295,8 +295,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a href="anunaad.pdf"  target="_blank" class="section__more-link">
-								<span class="section__more-linktext"><b>CLICK HERE</b></span>
+							<a target="_blank" class="section__more-link">
+								<center><span class="section__more-linktext"><b>team.culrav@culrav.in</b></span></center>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -353,8 +353,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a href="anunaad.pdf"  target="_blank" class="section__more-link">
-								<span class="section__more-linktext"><b>CLICK HERE</b></span>
+							<a target="_blank" class="section__more-link">
+								<center><span class="section__more-linktext"><b>team.culrav@culrav.in</b></span></center>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -411,8 +411,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<center><a href="anunaad.pdf"  target="_blank" class="section__more-link">
-								<span class="section__more-linktext"><b>CLICK HERE</b></span>
+							<center><a target="_blank" class="section__more-link">
+								<center><span class="section__more-linktext"><b>team.culrav@culrav.in</b></span></center>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a></center>
 						</div>
@@ -464,10 +464,10 @@
 				<div class="section__more">
 					<div class="section__more-inner section__more-inner--bg1">
 						<span class="section__more-text">Want to know more?</span>
-						<center><a href="anunaad.pdf"  target="_blank" class="section__more-link">
-							<span class="section__more-linktext"><b>CLICK HERE</b></span>
-							<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
-						</a></center>
+						<center><a target="_blank" class="section__more-link">
+								<center><span class="section__more-linktext"><b>team.culrav@culrav.in</b></span></center>
+								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
+							</a></center>
 					</div>
 				</div>
 				<div class="section__expander"></div>
