--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -24,6 +24,13 @@
             background-repeat: no-repeat;
             background-attachment: fixed;
         }
+        .text-center {
+            margin-top:30px;
+        }
+        img {
+            height: 200px;
+            width:300px;
+        }
     </style>
 </head>
 
@@ -65,249 +72,121 @@
             <h1 class="text-center "><b>OUR SPONSORS</b></h1>
         </div>
         <div class="row margin-50">
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Agmatel.jpg" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/aricent.jpg" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/bakh.jpg" alt=""></a>
             </div>
-        </div>
-        <div class="row" style="margin-top: 10px;">
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-        </div>
-        <div class="row margin-50">
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Bikanervala.png" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/birla-gold.png" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/BSA.png" alt=""></a>
             </div>
-        </div>
-        <div class="row" style="margin-top: 10px;">
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-        </div>
-        <div class="row margin-50">
-            <div class="col-md-4 text-center ">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/career.png" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Cola.png" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/dairy.jpg" alt=""></a>
             </div>
-        </div>
-        <div class="row" style="margin-top: 10px;">
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-        </div>
-        <div class="row margin-50">
-            <div class="col-md-4 text-center ">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/dell.png" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/digit.png" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/glozon.png" alt=""></a>
             </div>
-        </div>
-        <div class="row" style="margin-top: 10px;">
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-        </div>
-        <div class="row margin-50">
-            <div class="col-md-4 text-center ">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/gate.jpg" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/hercules.png" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/ims.jpeg" alt=""></a>
             </div>
-        </div>
-        <div class="row" style="margin-top: 10px;">
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-        </div>
-        <div class="row margin-50">
-            <div class="col-md-4 text-center ">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/kodak.png" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/koutons.jpg" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/ktpl.png" alt=""></a>
             </div>
-        </div>
-        <div class="row" style="margin-top: 10px;">
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-        </div>
-        <div class="row margin-50">
-            <div class="col-md-4 text-center ">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/lazyninja.jpeg" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/levi's.png" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Myntra.png" alt=""></a>
             </div>
-        </div>
-        <div class="row" style="margin-top: 10px;">
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-        </div>
-        <div class="row margin-50">
-            <div class="col-md-4 text-center ">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Nescafe.png" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Nimbooz.jpeg" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/pepsi.png" alt=""></a>
             </div>
-        </div>
-        <div class="row" style=" margin-top: 10px; margin-bottom: 100px;">
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-        </div>
-        <div class="row margin-50">
-            <div class="col-md-4 text-center ">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/PNB.jpg" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/sonata.jpg" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/SBI.png" alt=""></a>
             </div>
-        </div>
-        <div class="row" style=" margin-top: 10px; margin-bottom: 100px;">
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-        </div>
-        <div class="row margin-50">
-            <div class="col-md-4 text-center ">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Tata.png" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/time.jpg" alt=""></a>
             </div>
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/thinklabs.png" alt=""></a>
             </div>
-        </div>
-        <div class="row" style=" margin-top: 10px; margin-bottom: 100px;">
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-        </div>
-        <div class="row margin-50">
-            <div class="col-md-4 text-center ">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/union-bank.png" alt=""></a>
             </div>
 
-            <div class="col-md-4 text-center ">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
                 <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/vijaya.png" alt=""></a>
             </div>
         </div>
-        <div class="row" style=" margin-top: 10px; margin-bottom: 100px;">
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-            <div class="col-md-4">
-                <h3 class="text-center"><b>Sponsor</b></h3>
-            </div>
-        </div>
+
 
     </div>
     <footer>
 
         <!--For links-->
         <div class="row">
-            <div class=" col-xs-12 col-sm-12 col-md-6" id="logos_contact" align="center">
+            <div class=" col-xs-12 col-sm-6 col-md-6" id="logos_contact" align="center">
                 <div class="row">
                     <div class="col-xs-12 col-sm-5 col-md-5  logo_contact_div" id="logo_div">
                         <h2>&nbsp;&nbsp;Culrav</h2>
@@ -323,14 +202,14 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-6" id="links">
+            <div class="col-xs-12 col-sm-6 col-md-6" id="links">
                 <div class="row">
-                    <div class="col-xs-12 col-sm-12" align="center" id="title">
+                    <div class="col-xs-12 col-sm-6" align="center" id="title">
                         <strong>Other</strong>
                     </div>
                 </div>
                 <div class="row last_row">
-                    <div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="events_div" align="center">
+                    <div class=" col-xs-12 col-sm-6 col-md-6 logo_contact_div" id="events_div" align="center">
                         <ul style="list-style: none;">
                             <li><a href="../../index.html" target="_blank" class="footer_links">Home</a></li>
                             <li><a href="../../events/index.html" target="_blank" class="footer_links">Events</a></li>
@@ -338,7 +217,7 @@
                             <li><a href="../../schedule/index.html" target="_blank" class="footer_links">Schedule</a></li>
                         </ul>
                     </div>
-                    <div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="navigate_div" align="center">
+                    <div class=" col-xs-12 col-sm-6 col-md-6 logo_contact_div" id="navigate_div" align="center">
                         <ul style="list-style: none;">
                             <!--<li><strong>Navigate</strong></li>-->
                             <!--<li><a class="footer_links">Home</a></li>-->
