--- a/schedule/index.html
+++ b/schedule/index.html
@@ -37,7 +37,20 @@
         </div>
       </div>
     </li>
+     <li><div class="tldate">Mar 24 , 2018</div></li>
     
+    <li class="timeline-inverted">
+      <div class="tl-circ"></div>
+      <div class="timeline-panel">
+        <div class="tl-heading">
+          <h4>Anunaad (Eliminations)</h4>
+          <br><p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11:00 AM-1:30 PM</small></p>
+        </div>
+        <div class="tl-body">
+          <p>Venue - Seminar Hall</p>
+        </div>
+      </div>
+    </li>   
      <li>
       <div class="tl-circ"></div>
       <div class="timeline-panel">
