--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -5,6 +5,7 @@
 
 <head lang="en">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <script src="js/html5shiv.js"></script>
     <link href="css/bootstrap.css" rel="stylesheet">
