Modify Sponsors Page

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html>
-
-<!-- Mirrored from culrav.in/sponsors/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 12 Jul 2016 00:25:47 GMT -->
-
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +13,9 @@
     <link rel="stylesheet" type="text/css" href="css/navbar.css" />
     <link rel="stylesheet" type="text/css" href="css/base.css" />
     <link rel="stylesheet" type="text/css" href="css/slider.css" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="pater/pater.css" />
     <link rel="stylesheet" type="text/css" href="../css/footer.css" />
     <style>
@@ -70,7 +69,7 @@
 
     <div class="container">
         <div class="row" style="margin-top: 50px;">
-            <h1 class="text-center "><b>OUR SPONSORS</b></h1>
+            <h1 class="text-center "><b>PAST SPONSORS</b></h1>
         </div>
         <div class="row margin-50">
             <div class="col-lg-4 col-md-6 col-sm-6 text-center">
