--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Culrav | MNNIT </title>
 	<meta name="description" content="The end of March will corroborate to be a week of euphoria and fresh ideation, a resplendent rostrum to hone ones flair and virtuosity and bask in the glory of triumph and merriment,
-known as CULRAV 2018- the annual cultural extravaganza of Motilal Nehru National Institute of Technology Allahabad." />
+	known as CULRAV 2018- the annual cultural extravaganza of Motilal Nehru National Institute of Technology Allahabad." />
 	<meta name="keywords" content="culrav,MNNIT,ALlahabad,Cultural Fest" />
 	<meta name="author" content="MNNIT" />
 	<link rel="shortcut icon" href="favicon.ico">
@@ -51,15 +51,15 @@ known as CULRAV 2018- the annual cultural extravaganza of Motilal Nehru National
 			</script>
 			<style type="text/css">
 
-.btn {
-	font-size: 20px;
-	height: 40px;
-	min-width: 100px;
-	background-color: #1c1c31;
-	color: white;
-	cursor: pointer;
-	margin-right: 10px;
-	margin-top: 20px;
+			.btn {
+				font-size: 20px;
+				height: 40px;
+				min-width: 100px;
+				background-color: #1c1c31;
+				color: white;
+				cursor: pointer;
+				margin-right: 10px;
+				margin-top: 20px;
 /*	right: 35vw;
 	top: 35vh;
 	left:45vw;
@@ -122,7 +122,7 @@ known as CULRAV 2018- the annual cultural extravaganza of Motilal Nehru National
 	}
 }
 @media only screen and (max-width: 700px) {
-<<<<<<< HEAD
+	<<<<<<< HEAD
 
 
 	.slogan {
@@ -145,7 +145,7 @@ known as CULRAV 2018- the annual cultural extravaganza of Motilal Nehru National
 		font-size: 70px;
 	}
 
-=======
+	=======
 
 
 	.slogan {
@@ -168,7 +168,7 @@ known as CULRAV 2018- the annual cultural extravaganza of Motilal Nehru National
 		font-size: 70px;
 	}
 
->>>>>>> b9ab3b6a8b6ae20339f0ca1f7b8a7725902c7da6
+	>>>>>>> b9ab3b6a8b6ae20339f0ca1f7b8a7725902c7da6
 	.slogan {
 		font-size: 30px;
 	}
@@ -186,32 +186,32 @@ known as CULRAV 2018- the annual cultural extravaganza of Motilal Nehru National
 	}
 
 }
-			</style>
-		</head>
-		<body class="demo-6">
+</style>
+</head>
+<body class="demo-6">
 
-			
-			<div class="trigger-headline trigger-headline--hidden" style="display:flex;flex-direction: column;display:none;">
-					<h2  style="font-family:flesh;color:#F28B04;letter-spacing:1vw;" class="event-name">
-						CULRAV
-					</h2>
+	
+	<div class="trigger-headline trigger-headline--hidden" style="display:flex;flex-direction: column;display:none;">
+		<h2  style="font-family:flesh;color:#F28B04;letter-spacing:1vw;" class="event-name">
+			CULRAV
+		</h2>
 
-					<center><p style="font-family:Freckle Face;color:white;letter-spacing:0.5vw;font-weight:300" class="slogan">
-						<i class="slogan">"A Tryst With Darkness"</i>
-					</p></center>
-					<p style="font-family:Chewy;color:white;letter-spacing:0.5vw;;margin-top: 5px;" class="event-date">21<sup>st</sup>-24<sup>th</sup> March 2018</p>
-					<p style="display:flex;flex-wrap: wrap;">
-						<center><a href="./events/index.html" id="linkToEvent"><button class="btn">Events</button></a>
-						<a href="./sponsors/index.html" id="linkToEvent"><button class="btn">Sponsors</button></a>
-						<a href="./schedule/index.html" id="linkToEvent"><button class="btn">Schedule</button></a>
-						<a href="./team/index.html" id="linkToEvent"><button class="btn">Team</button></a></center>
-					</p>
-					<p style="font-family:Electrolize;color:white;letter-spacing:0.3vw;margin-top: 20px" class="college-name">Motilal Nehru National Institute Of Technology, Allahabad</p>
-				</div>
+		<center><p style="font-family:Freckle Face;color:white;letter-spacing:0.5vw;font-weight:300" class="slogan">
+			<i class="slogan">"A Tryst With Darkness"</i>
+		</p></center>
+		<p style="font-family:Chewy;color:white;letter-spacing:0.5vw;;margin-top: 5px;" class="event-date">21<sup>st</sup>-24<sup>th</sup> March 2018</p>
+		<p style="display:flex;flex-wrap: wrap;">
+			<center><a href="./events/index.html" id="linkToEvent"><button class="btn">Events</button></a>
+				<a href="./sponsors/index.html" id="linkToEvent"><button class="btn">Sponsors</button></a>
+				<a href="./schedule/index.html" id="linkToEvent"><button class="btn">Schedule</button></a>
+				<a href="./team/index.html" id="linkToEvent"><button class="btn">Team</button></a></center>
+			</p>
+			<p style="font-family:Electrolize;color:white;letter-spacing:0.3vw;margin-top: 20px" class="college-name">Motilal Nehru National Institute Of Technology, Allahabad</p>
+		</div>
 
 
 
-			<main >
+		<main >
 
 
 
@@ -238,7 +238,7 @@ known as CULRAV 2018- the annual cultural extravaganza of Motilal Nehru National
 
 
 
-				
+			
 
 			<div class="bottom-nav">
 				<button class="btn btn--trigger btn--hidden" style="display:none"></button>
@@ -291,10 +291,15 @@ known as CULRAV 2018- the annual cultural extravaganza of Motilal Nehru National
 </script>
 
 <script>
-setTimeout(function(){
-	$('.btn--trigger').trigger('click');
-	$('.trigger-headline').show(1500,"linear")
-},700);
+/*setTimeout(function(){
+	
+},700);*/
+
+
+window.onload = function () { $('.btn--trigger').trigger('click');
+$('.trigger-headline').show(1500,"linear") }
+
+
 </script>
 
 
