--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 	crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="./js/anime.min.js"></script>
 	<script src="./js/imagesloaded.pkgd.min.js"></script>
 	<script src="./js/main.js"></script>
+	<script src="./js/anime.min.js"></script>
+	
 
 		<!--[if IE]>
 			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -248,14 +249,19 @@
 
 
 
+
+</body>
+
 <script>
 /*setTimeout(function(){
 	
 },700);*/
 
 
-window.onload = function () { $('.btn--trigger').trigger('click');
-$('.trigger-headline').show(1500,"linear") }
+window.onload = function () { 
+$('.trigger-headline').show(1000,"swing",function(){
+	$('.btn--trigger').trigger('click');
+}) }
 
 
 </script>
@@ -301,8 +307,6 @@ $('.trigger-headline').show(1500,"linear") }
 })();
 </script>
 
-
-</body>
 
 <!-- Mirrored from tympanus.net/Development/SegmentEffect/index6.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Feb 2018 08:08:21 GMT -->
 </html>
